re #40036 fix styles for program top text, fix js for button ton

--- a/app/Resources/markup/src/styles/partials/event.scss
+++ b/app/Resources/markup/src/styles/partials/event.scss
@@ -381,6 +381,12 @@
 
   &__title {
     margin: 0 0 22px 90px;
+
+    & + p {
+      font-size: 18px;
+      line-height: 26px;
+      margin: 0 0 12px 90px;
+    }
   }
 }
 
